Modify config of debug x64.
Modify config of debug x64.

Signed-off-by: mlfcjob@163.com <mlfcjob@163.com>

--- a/2018_12_19_ffmpeg_get_mediaInfo/2018_12_19_ffmpeg_get_mediaInfo.vcxproj
+++ b/2018_12_19_ffmpeg_get_mediaInfo/2018_12_19_ffmpeg_get_mediaInfo.vcxproj
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>..\..\bin\x64</OutDir>
+    <OutDir>.\bin\x64</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>.\bin\x64</OutDir>
@@ -89,10 +89,10 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\ffmpeg\ffmpeg-20181102-66425ad-win64-dev\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\github\GetMediaInfo\2018_12_19_ffmpeg_get_mediaInfo\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>F:\ffmpeg\ffmpeg-20181102-66425ad-win64-dev\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>F:\github\GetMediaInfo\2018_12_19_ffmpeg_get_mediaInfo\lib\x64;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
